--- a/dfsclient/pom.xml
+++ b/dfsclient/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.hpccsystems</groupId>
     <artifactId>hpcc4j</artifactId>
-    <version>9.14.6-1-SNAPSHOT</version>
+    <version>9.14.6-1</version>
   </parent>
 
   <build>
