--- a/.github/workflows/Jirabot.yml
+++ b/.github/workflows/Jirabot.yml
@@ -23,7 +23,7 @@ jobs:
           python -VV
           python -m site
           python -m pip install --upgrade pip setuptools wheel
-          python -m pip install --upgrade atlassian-python-api
+          python -m pip install atlassian-python-api==4.0.4
           python -m pip --version
       - name: "Run"
         env:
