--- a/.github/workflows/JirabotMerge.yml
+++ b/.github/workflows/JirabotMerge.yml
@@ -38,7 +38,7 @@ jobs:
           python -VV
           python -m site
           python -m pip install --upgrade pip setuptools wheel
-          python -m pip install --upgrade atlassian-python-api
+          python -m pip install atlassian-python-api==4.0.4
           python -m pip install --upgrade jira
       - name: "Checkout"
         uses: actions/checkout@v4
