--- a/wsclient/pom.xml
+++ b/wsclient/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.hpccsystems</groupId>
     <artifactId>hpcc4j</artifactId>
-    <version>9.12.58-2-SNAPSHOT</version>
+    <version>9.12.58-1</version>
   </parent>
 
   <properties>
