--- a/.github/workflows/upmerge-test.yml
+++ b/.github/workflows/upmerge-test.yml
@@ -40,6 +40,14 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
           fetch-tags: true
+      - name: "Add upstream remote"
+        run: |
+          git remote add upstream https://github.com/hpcc-systems/hpcc4j.git
+          git fetch upstream --tags
+      - name: "List remotes"
+        run: |
+          echo "Configured git remotes:"
+          git remote -v
       - name: "Run"
         env:
           PULL_REQUEST_NUMBER : ${{ github.event.pull_request.number }}
@@ -175,7 +183,7 @@ jobs:
 
             def getTargetInBranchVersion(targetBranch):
                 # Use git show to get the version from the top-level pom.xml
-                cmd = ["git", "show", f"origin/{targetBranch}:pom.xml"]
+                cmd = ["git", "show", f"upstream/{targetBranch}:pom.xml"]
                 result = subprocess.run(cmd, capture_output=True, text=True, check=True)
                 pom_content = result.stdout
 
@@ -280,8 +288,18 @@ jobs:
                     if commit_result.returncode != 0:
                         print(f"Warning: git commit failed (may be no changes): {commit_result.stderr}")
 
+                    # Print out git diff between HEAD pom and target pom
+                    diff_result = subprocess.run(
+                        ["git", "diff", "HEAD", f"upstream/{targetBranch}", "--", "pom.xml", "**/pom.xml"], 
+                        capture_output=True, text=True
+                    )
+                    if diff_result.returncode != 0:
+                        print(f"Warning: git diff failed: {diff_result.stderr}")
+                    else:
+                        print(f"Git diff between HEAD and upstream/{targetBranch}:\n{diff_result.stdout}")
+
                     # Check if there is a merge conflict
-                    merge_conflict = get_merge_conflict("HEAD", f"origin/{targetBranch}")
+                    merge_conflict = get_merge_conflict("HEAD", f"upstream/{targetBranch}")
 
                     if merge_conflict != "":
                         print(f"Upmerge to {targetBranch} would cause a conflict.")
