--- a/.github/workflows/upmerge-test.yml
+++ b/.github/workflows/upmerge-test.yml
@@ -43,7 +43,7 @@ jobs:
       - name: "Configure Git User"
         run: |
           git config user.name "HPCC4J Bot"
-          git config user.email "bot@hpccsystems.com"
+          git config user.email "support@hpccsystems.com"
       - name: "Add upstream remote"
         run: |
           git remote add upstream https://github.com/hpcc-systems/hpcc4j.git
