--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-      <!-- Override commons-fileupload2 versions to fix CVE in transitive dependencies from Axis2 -->
+      <!-- Override commons-fileupload2 versions to fix CVE-2025-48976 in transitive dependencies from Axis2 -->
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-fileupload2-core</artifactId>
