HPCC4J-766 Added git config for upmerge-test (#925)
Signed-off-by: James McMullan James.McMullan@lexisnexis.com

--- a/.github/workflows/upmerge-test.yml
+++ b/.github/workflows/upmerge-test.yml
@@ -40,6 +40,10 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
           fetch-tags: true
+      - name: "Configure Git User"
+        run: |
+          git config user.name "HPCC4J Bot"
+          git config user.email "support@hpccsystems.com"
       - name: "Add upstream remote"
         run: |
           git remote add upstream https://github.com/hpcc-systems/hpcc4j.git
