HPCC4J-770 Correct mvn config to skip tests with known issues
- Modified poms to skip UnverifiedServerIssues, UnverifiedClientIssues and KnownServerIssueTests

Signed-off-by: James McMullan James.McMullan@lexisnexis.com

--- a/commons-hpcc/pom.xml
+++ b/commons-hpcc/pom.xml
@@ -27,6 +27,10 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven.surefire.version}</version>
+        <configuration>
+          <groups>${groups}</groups>
+          <excludedGroups>${excludedGroups}</excludedGroups>
+        </configuration>
       </plugin>
     </plugins>
   </build>
