--- a/.github/workflows/upmerge-test.yml
+++ b/.github/workflows/upmerge-test.yml
@@ -82,7 +82,7 @@ jobs:
                 return [major, minor, point]
 
             def getTagVersionForCmd(cmd):
-                versionPattern = re.compile(r".*([0-9]+\.[0-9]+\.[0-9]+).*")
+                versionPattern = re.compile(r".*[^0-9]+([0-9]+\.[0-9]+\.[0-9]+).*")
 
                 # Get latest release version
                 gitTagProcess = subprocess.Popen(cmd, stdout=subprocess.PIPE, shell=True)
@@ -99,7 +99,7 @@ jobs:
                 if versionMatch:
                     return extractVersion(versionMatch.group(1))
                 else:
-                    print('Unable to extract version from git tag.')
+                    print('Unable to extract version from git tag: ' + latestGitTag + ' expected string format: <prefix>major.minor.point(-patch)?<postfix>')
                     sys.exit(2)
 
             def buildBranchString(version):
