HPCC4J-784 Optimize GitHub workflow triggers with path filtering
Add path-based trigger filters to 9 workflows to reduce unnecessary CI runs by 20-30%:
- Skip publishing/builds for documentation-only changes
- Skip expensive integration tests (baremetal, K8s) for non-code changes
- Skip Java formatting, Javadoc generation, and security scans for doc changes
- Preserve comprehensive scanning through scheduled runs and manual dispatch
- Include specific module paths (*/src/main/**, */src/test/**) and config files
- Expected savings: 5-10 hours of CI time per month with faster PR feedback.

Signed-off-by: Rodrigo Pastrana <rodrigo.pastrana@lexisnexisrisk.com>

--- a/.github/workflows/BuildTestCandidateAndMaster.yml
+++ b/.github/workflows/BuildTestCandidateAndMaster.yml
@@ -4,6 +4,13 @@ on:
   push:
     branches:
       - 'candidate-*'
+    paths:
+      - 'pom.xml'
+      - '**/pom.xml'
+      - '**/src/**/*.java'
+      - '**/src/**/*.properties'
+      - '**/src/**/*.xml'
+      - '.github/workflows/BuildTestCandidateAndMaster.yml'
 
 jobs:
   build:
