--- a/commons-hpcc/pom.xml
+++ b/commons-hpcc/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.hpccsystems</groupId>
     <artifactId>hpcc4j</artifactId>
-    <version>9.14.64-2-SNAPSHOT</version>
+    <version>9.14.64-1</version>
   </parent>
 
   <build>
